# recipe-bot

./: .gitignore  README.md  mypy.ini  pyproject.toml
src/: __init__.py  main.py  viewer.py
src/config/: config.py
src/firebase/: __init__.py  client.py
src/models/: __init__.py  cookbook.py  recipe.py  user.py
src/recipe_bot/: main.py
src/recipe_bot/firebase/: client.py
src/recipe_bot/scraper/: downloader.py  gpt_processor.py  recipe_generator.py  transcriber.py
src/scraper/: downloader.py  recipe_generator.py  transcriber.py
