[project]
name = "recipe-bot"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    { name = "Allison Emily Coleman", email = "allisonemilycoleman@gmail.com" },
]
dependencies = ["instaloader", "openai"]
requires-python = "==3.12.*"
readme = "README.md"
license = { text = "MIT" }


[tool.pdm]
distribution = false
