[project]
name = "recipe-bot"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    { name = "Allison Emily Coleman", email = "allisonemilycoleman@gmail.com" },
]
dependencies = [
    "instaloader",
    "openai",
    "pydub>=0.25.1",
    "openai-whisper>=20240930",
    "google-cloud-firestore>=2.19.0",
    "firebase-admin>=6.6.0",
]
requires-python = "==3.12.*"
readme = "README.md"
license = { text = "MIT" }


[tool.pdm]
distribution = false
